@@ -99,6 +99,9 @@ L<Test::More> C<diag>.
 You can have it report the output on success with L<#compile_output_to_diag>
 or L<#compile_output_to_note>.
 
+In addition to the pass/fail and diagnostic output, this function
+will return true or false on success and failure respectively.
+
 =cut
 
 my $output = '';
@@ -122,6 +125,8 @@ sub compile_run_ok ($;$)
   {
     $tb->note($out);
   }
+  
+  $ok;
 }
 
 =head2 compile_with_alien
