@@ -1,13 +1,17 @@
 use strict;
 use warnings;
-use Test::More tests => 2;
+use Test::More tests => 4;
 use Test::CChecker;
 
-compile_run_ok <<EOF, "basic compile test";
+my $r;
+
+$r = compile_run_ok <<EOF, "basic compile test";
 int main(int argc, char *argv[]) { return 0; }
 EOF
 
-compile_run_ok { extra_compiler_flags => ['-DFOO_BAR_BAZ=1'], source => <<EOF }, "define test";
+ok $r, 'returns okay';
+
+$r = compile_run_ok { extra_compiler_flags => ['-DFOO_BAR_BAZ=1'], source => <<EOF }, "define test";
 #if ! FOO_BAR_BAZ
 #include <stdio.h>
 #endif
@@ -22,3 +26,5 @@ main(int argc, char *argv[])
 #endif
 }
 EOF
+
+ok $r, 'returns ok';
