@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - compile_run_ok returns true on success, false on failure
 
 0.04      2013-12-12 17:06:12 -0500
   - first CPAN release!
